--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box ;
 }
 
-.parent {
+/*.parent {
     height: 90vh;
     width: 90%; 
     border: 1px solid red;
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .enfant {
@@ -19,5 +20,28 @@
     width: 100px;
     background-color: green;
 
+}*/
+
+.parent {
+    position: relative;
 }
+
+.box {
+    height: 80px;
+    width: 80px;
+    background-color: blue;
+}
+
+.box,
+#checkbox {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#checkbox:checked ~ .box{
+    background: red;
+}
+
+
 
